# skin_detect

./: LICENSE  README.md  requirements.txt
htmlcov/: index.html  skinny___init___py.html  skinny_faults_py.html  skinny_histogram_py.html  skinny_server_py.html  skinny_skin_detect_py.html  skinny_tests___init___py.html  skinny_tests_test_server_py.html  skinny_utils_py.html  status.json
skinny/: __init__.py  faults.py  histogram.py  server.py  skin_detect.py  utils.py
skinny/tests/: __init__.py  test_server.py
trials/: client.py  old_skin_detect.py  server.py
trials/SPMandEBM/: AbstractSkinDetector.h  CMakeLists.txt  EllipticalBoundaryModel.h  SkinProbablilityMaps.h  main.cpp
trials/point-to-define/point_to_define/: display.py  draw_frame.py  hand_detection.py  image_analysis.py
twisted/plugins/: dropin.cache  skinny_plugin.py
